[package]
name = "did"
version = "0.0.0"
publish = false
edition = "2021"
authors = ["you"]

[lib]
path = "src/did.rs"

[dependencies.multiversx-sc]
version = "0.53.2"


[dev-dependencies.multiversx-sc-scenario]
version = "0.53.2"

[workspace]
members = [
    ".",
    "meta",
]
[dependencies]
hex = "0.4.3"
